---------------------------------------------------------------------------------------------------
Version: 0.1.2
  Ease of use:
    - Warn that base dimensions are unknown if TLBE is loaded into an existing game
    - Changed "speed increase" default to take one screenshot per minute
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 28-06-2020
  Bugfixes:
    - Basic support loading into existing games
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 20-06-2020
  Info:
    - Initial release