@@ -4,13 +4,13 @@ mod-loaded=TBLE got loaded into an existing game, please build an entity in each
 msg-once=This message will only show once!
 screenshot-taken=Screenshot taken!
 tlbe-disabled=TLBE disabled
+tlbe-enabled=TLBE is fired up to take screenshots of your base
 
 [mod-setting-name]
 tlbe-enabled=Take screenshots
 tlbe-follow-player=Follow player
 tlbe-follow-launch=Follow rocket launch
 tlbe-frame-rate=Frame rate
-tlbe-notices-enabled=Notifications
 tlbe-resolution-x=Image width
 tlbe-resolution-y=Image height
 tlbe-save-folder=Save location
@@ -22,7 +22,6 @@ tlbe-enabled=Enables Timelapse Extended mod to take screenshots
 tlbe-follow-player=Keep follow player until the first entity is built. When disabled TLBE is disabled until the first enitity is built.
 tlbe-follow-launch=Zoom in when a rocket is being launched, afterwards zoom out to base again (when multiple rockets are launching, only first rocket is tracked)
 tlbe-frame-rate=Frame rate of final movie/output
-tlbe-notices-enabled=Notify player when a screenshot is taken
 tlbe-save-folder=Relative from 'User Data Directory'
 tlbe-speed-increase=Output speed gain compared to actual game
 tlbe-zoom-period=Time (seconds) it should take to recenter on the base
