@@ -1,8 +1,11 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.2
+  Minor Features:
+    - Inform player when TBLE starts to take screenshots (instead of a notification per screenshot)
   Ease of use:
     - Warn that base dimensions are unknown if TLBE is loaded into an existing game
     - Changed "speed increase" default to take one screenshot per minute
+
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.1
 Date: 28-06-2020
